minikube/k8s/k8s-4-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: spring-jpa
  annotations:
    external-dns.alpha.kubernetes.io/hostname: minikube-spring-jpa.pineapple.com.
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: minikube-spring-jpa.pineapple.com
      http:
        paths:
          - pathType: Prefix
            path: /(ws/api/pineapple-service.*)
            backend:
              service:
                name: spring-jpa-ip-service
                port:
                  number: 8080
